--- a/style.css
+++ b/style.css
@@ -18,8 +18,8 @@ body{
 
 
 .container{
-    width: 25%;
-    min-width: 300px; /*making sure it doesnt go under 300 pixels (instead of using media queries)*/
+    width: 100%;
+    max-width: 325px; /*making sure it doesnt go under 300 pixels (instead of using media queries)*/
     display: flex;
     justify-content: center;
     flex-direction: column;
